[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "highway_core"
version = "0.0.2"
authors = [
  { name = "Farseed Ashouri", email = "farseed.ashouri@gmail.com" },
]
description = "Workflow Core Engine for Highway Workflow Platform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# add dependencies here
dependencies = [
    "psutil>=7.1.2",
    "pyyaml>=6.0",
    "requests>=2.28.1",
    "pydantic>=2.0.1",
    ]
# dev dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.28.1",
    "pytest-cov>=2.12.1",
]

[project.urls]
Homepage = "https://github.com/rodmena-limited/highway_core"
Issues = "https://github.com/rodmena-limited/highway_core/issues"
