[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "highway_core"
version = "0.0.8"
authors = [
  { name = "Farseed Ashouri", email = "farseed.ashouri@gmail.com" },
]
description = "A powerful and flexible workflow engine that enables you to define, execute, and manage complex workflows with ease"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

# add dependencies here
dependencies = [
    "psutil>=7.1.2",
    "pyyaml>=6.0",
    "requests>=2.28.1",
    "pydantic>=2.0.1",
    ]
# dev dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.28.1",
    "pytest-cov>=2.12.1",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/rodmena-limited/highway_core"
Issues = "https://github.com/rodmena-limited/highway_core/issues"

# mypy, ignore tests/ folder
[tool.mypy]
files = "highway_core"
exclude = "tests/.*"
ignore_missing_imports = true
strict = false

# pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=highway_core --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
